force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>VCC_Emergency_Contact__c</fullName>
    <description>Name of Patient&apos;s Emergency Contact from Account</description>
    <formula>VCC_Case__r.Contact.VCC_Emergency_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of Patient&apos;s Emergency Contact from Account</inlineHelpText>
    <label>Emergency Contact</label>
    <type>Text</type>
</CustomField>