force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Emergency_Contact_Info_Verified__c.field-meta.xml
<CustomField>
    <fullName>VCC_Emergency_Contact_Info_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Emergency Contact Information has been verified by the caller.</description>
    <label>Emergency Contact Information Verified</label>
    <type>Checkbox</type>
</CustomField>