force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Emergency_Department_Payment_Discl__c.field-meta.xml
<CustomField>
    <fullName>VCC_Emergency_Department_Payment_Discl__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
    >By checking this box, the following text will be written to the VistA progress note: “Patient advised that recommendation for care provided during the call does not
        constitute an approval for authorization for payment by the VA or its staff. Patient advised to report a community ED visit to the national Office of Community Care at
        1-844-724-7842 within 72 hours.”</inlineHelpText>
    <label>Emergency Department Payment Disclaimer</label>
    <type>Checkbox</type>
</CustomField>