force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_encounterString__c.field-meta.xml
<CustomField>
    <fullName>VCC_encounterString__c</fullName>
    <description>Contains the encounter string passed to VistA with &apos;WriteNote&apos; VDIF call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>encounterString</label>
    <length>50</length>
    <type>Text</type>
</CustomField>