force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Exercise_discussion_comments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Exercise_discussion_comments__c</fullName>
    <description>Comments related to discussion with patient about Exercise</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comments related to discussion with patient about Exercise</inlineHelpText>
    <label>Exercise discussion comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>