force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Follow_up_Appt_comments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Follow_up_Appt_comments__c</fullName>
    <description>If provider suggests a follow-up appointment for the patient, additional notes go here</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If provider suggests a follow-up appointment for the patient, additional notes go here</inlineHelpText>
    <label>Follow-up Appt comments</label>
    <type>TextArea</type>
</CustomField>