force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Follow_up_Appt_referral__c.field-meta.xml
<CustomField>
    <fullName>VCC_Follow_up_Appt_referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if medical practitioner referred patient for follow-up appointment during virtual visit</description>
    <inlineHelpText>True if medical practitioner referred patient for follow-up appointment during virtual visit</inlineHelpText>
    <label>Follow-up Appt referral</label>
    <type>Checkbox</type>
</CustomField>