force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Future_Appointments_Ext__c.field-meta.xml
<CustomField>
    <fullName>VCC_Future_Appointments_Ext__c</fullName>
    <description>Used to enter future appointment dates in Medication Extension section</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter future appointment dates</inlineHelpText>
    <label>Future Appointments</label>
    <length>100</length>
    <type>Text</type>
</CustomField>