force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_General_Observation_Other__c.field-meta.xml
<CustomField>
    <fullName>VCC_General_Observation_Other__c</fullName>
    <description>Virtual observation about patient made by medical provider during virtual care visit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Virtual observation about patient made by medical provider during virtual care visit</inlineHelpText>
    <label>General Observation Other</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>