force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Generated_Message_to_Facility_MSA__c.field-meta.xml
<CustomField>
    <fullName>VCC_Generated_Message_to_Facility_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If CCC MSA cannot complete RTC order, a progress note needs to be sent to the facility MSA to complete the order</description>
    <inlineHelpText>If CCC MSA cannot complete RTC order, a progress note needs to be sent to the facility MSA to complete the order</inlineHelpText>
    <label>Generated message to facility MSA</label>
    <type>Checkbox</type>
</CustomField>