force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Generated_message_to_PACT_Provider__c.field-meta.xml
<CustomField>
    <fullName>VCC_Generated_message_to_PACT_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Agent checked &apos;Other course(s) of action&apos; and generated a message to the patient&apos;s assigned PACT/Provider</description>
    <inlineHelpText>Check if you generated a message to the patient&apos;s assigned PACT/Provider</inlineHelpText>
    <label>Generated msg to PACT/Provider</label>
    <type>Checkbox</type>
</CustomField>