force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_GeneratedMessageToPACT_NonTriage__c.field-meta.xml
<CustomField>
    <fullName>VCC_GeneratedMessageToPACT_NonTriage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the patient is non-triage and a message was generated to PACT/Provider</description>
    <inlineHelpText>Check if the patient is non-triage and a message was generated to PACT/Provider</inlineHelpText>
    <label>Generated msg to PACT/Provider-NonTriage</label>
    <type>Checkbox</type>
</CustomField>