force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Heart_Rate__c.field-meta.xml
<CustomField>
    <fullName>VCC_Heart_Rate__c</fullName>
    <description>Beats per minute provided by patient</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Beats per minute provided by patient</inlineHelpText>
    <label>Heart rate BPM</label>
    <length>25</length>
    <type>Text</type>
</CustomField>