force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_HEENT_Other__c.field-meta.xml
<CustomField>
    <fullName>VCC_HEENT_Other__c</fullName>
    <description>Other HEENT symptoms discussed with medical provider during virtual visit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other HEENT symptoms discussed with medical provider during virtual visit</inlineHelpText>
    <label>HEENT Other</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>