force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_HEENT_Other_Observation__c.field-meta.xml
<CustomField>
    <fullName>VCC_HEENT_Other_Observation__c</fullName>
    <description>Other Virtual HEENT observations about patient made by medical provider during virtual care visit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other Virtual HEENT observations about patient made by medical provider during virtual care visit</inlineHelpText>
    <label>HEENT Other Observation</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>