force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Height__c.field-meta.xml
<CustomField>
    <fullName>VCC_Height__c</fullName>
    <description>Used for Vitals intake. Patient&apos;s height within 4&apos;0&quot; - 7&apos;4&quot; feet/inches</description>
    <inlineHelpText>Patient&apos;s height within 4&apos;0&quot; - 7&apos;4&quot; feet/inches</inlineHelpText>
    <label>Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4&apos;0&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;1&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;2&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;3&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;4&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;5&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;6&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;7&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;8&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;9&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;10&quot;</fullName>
            </value>
            <value>
                <fullName>4&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;0&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;1&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;2&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;3&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;4&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;5&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;6&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;7&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;8&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;9&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;10&quot;</fullName>
            </value>
            <value>
                <fullName>5&apos;11&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;0&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;1&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;2&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;3&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;4&quot;</fullName>
            </value>
            <value>
                <fullName>6&apos;5&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>