force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Hematologic_Other__c.field-meta.xml
<CustomField>
    <fullName>VCC_Hematologic_Other__c</fullName>
    <description>Other hematologic symptoms discussed with medical provider during virtual visit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other hematologic symptoms discussed with medical provider during virtual visit</inlineHelpText>
    <label>Hematologic Other</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>