force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_History_of_Present_Illness__c.field-meta.xml
<CustomField>
    <fullName>VCC_History_of_Present_Illness__c</fullName>
    <description>Used by medical provider during virtual care visit to document Illness History</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used by medical provider during virtual care visit to document Illness History</inlineHelpText>
    <label>History of Present Illness</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>