force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_History_of_splenectomy__c.field-meta.xml
<CustomField>
    <fullName>VCC_History_of_splenectomy__c</fullName>
    <description>Does patient have history of splenectomy</description>
    <inlineHelpText>Does patient have history of splenectomy</inlineHelpText>
    <label>History of splenectomy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>