force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Home_Care__c.field-meta.xml
<CustomField>
    <fullName>VCC_Home_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if patient requires no follow-up.</inlineHelpText>
    <label>Home Care</label>
    <type>Checkbox</type>
</CustomField>