force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Imaging_Comments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Imaging_Comments__c</fullName>
    <description>Enter comments about Imaging</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter comments about Imaging</inlineHelpText>
    <label>Imaging Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>