force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Immunizations__c.field-meta.xml
<CustomField>
    <fullName>VCC_Immunizations__c</fullName>
    <description>Used by CCC medical providers to comment on immunizations discussed with patient during a virtual care visit.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comment on immunizations discussed with patient during a virtual care visit.</inlineHelpText>
    <label>Immunizations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>