force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Impression_and_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>VCC_Impression_and_Assessment_Notes__c</fullName>
    <description>Enter notes about Assessment and Care Plan</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter notes about Assessment and Care Plan</inlineHelpText>
    <label>Assessment and Care Plan Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>