force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Impression_Assessment__c.field-meta.xml
<CustomField>
    <fullName>VCC_Impression_Assessment__c</fullName>
    <description>Additional impressions and assessments virtually made by provider</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Additional impressions and assessments virtually made by provider</inlineHelpText>
    <label>Impression &amp; Assessment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>