force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Instructed_to_go_to_Urgent_Care__c.field-meta.xml
<CustomField>
    <fullName>VCC_Instructed_to_go_to_Urgent_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Agent referred the patient to emergency services and instructed the patient to go to Urgent Care</description>
    <inlineHelpText>Check if you referred the patient to emergency services and instructed the patient to go to Urgent Care</inlineHelpText>
    <label>Instructed to go to Urgent Care (UC)</label>
    <type>Checkbox</type>
</CustomField>