force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Is_My_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_My_VISN__c</fullName>
    <description>Returns true or false if the progress note VISN matches with the user&apos;s VISN assignment</description>
    <formula>IF (VCC_Owner_Division__c = $User.Division ,TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My VISN</label>
    <type>Checkbox</type>
</CustomField>