force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Lab_results_Comments__c.field-meta.xml
<CustomField>
    <fullName>VCC_Lab_results_Comments__c</fullName>
    <description>Text area that captures lab result comments.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lab results Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>