force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Labs__c.field-meta.xml
<CustomField>
    <fullName>VCC_Labs__c</fullName>
    <description>Used by CCC pharmacists to comment on lab discussion during calls with patients.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comments from pharmacists on labs discussed during calls with patients.</inlineHelpText>
    <label>Labs</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>