force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Last_Menstrual_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>VCC_Last_Menstrual_Period_Start__c</fullName>
    <description>Veteran&apos;s first day of last period</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Veteran&apos;s first day of last period</inlineHelpText>
    <label>Last Menstrual Period Start</label>
    <type>Date</type>
</CustomField>