force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Left_message_to_call_back_the_CCC__c.field-meta.xml
<CustomField>
    <fullName>VCC_Left_message_to_call_back_the_CCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the agent left a message for the patient to call back the Clinical Contact Center</description>
    <inlineHelpText>Check if the agent left a message for the patient to call back the Clinical Contact Center</inlineHelpText>
    <label>Left message to call back the CCC</label>
    <type>Checkbox</type>
</CustomField>