force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_localPid__c.field-meta.xml
<CustomField>
    <fullName>VCC_localPid__c</fullName>
    <description>This field captures the unique patient id of the VistA instance where the progress note was written to and is used in various Flows and report types.</description>
    <inlineHelpText>Captures the unique patient id of the VistA instance where the note was written to.</inlineHelpText>
    <label>localPid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>