force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_localSiteId__c.field-meta.xml
<CustomField>
    <fullName>VCC_localSiteId__c</fullName>
    <description>This field captures the unique site id of the VistA instance where the progress note was written to and is used in various Flows and report types.</description>
    <label>localSiteId</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>