force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Logistical_Recommendation_WHEN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Logistical_Recommendation_WHEN__c</fullName>
    <description>Explain recommendation based on clinical or logistical factors.</description>
    <inlineHelpText>Explain recommendation based on clinical or logistical factors.</inlineHelpText>
    <label>Nurse&apos;s Recommendation / WHEN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>911</fullName>
            </value>
            <value>
                <fullName>Now</fullName>
            </value>
            <value>
                <fullName>Within 8 Hours</fullName>
            </value>
            <value>
                <fullName>Within 24 Hours</fullName>
            </value>
            <value>
                <fullName>Within 3 Days</fullName>
            </value>
            <value>
                <fullName>Within 2 Weeks</fullName>
            </value>
            <value>
                <fullName>Selfcare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>