force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Lost_Controlled_Substance__c.field-meta.xml
<CustomField>
    <fullName>VCC_Lost_Controlled_Substance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the patient is calling about a lost controlled substance</description>
    <inlineHelpText>Check if the patient is calling about a lost controlled substance</inlineHelpText>
    <label>Lost Controlled Substance</label>
    <type>Checkbox</type>
</CustomField>