force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Medication_Education_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>VCC_Medication_Education_Additional_Info__c</fullName>
    <description>Used for additional notes when &quot;No. Specify other reason&quot; is selected for Medication Education.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Medication Education Additional Info</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>