force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Medication_s_to_discontinue_taking__c.field-meta.xml
<CustomField>
    <fullName>VCC_Medication_s_to_discontinue_taking__c</fullName>
    <description>The names of the medication(s) that the patient should discontinue taking</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the names of the medication(s) that the patient should discontinue taking</inlineHelpText>
    <label>Medication(s) to discontinue taking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>