force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Medications__c.field-meta.xml
<CustomField>
    <fullName>VCC_Medications__c</fullName>
    <description>Used by the Medical Provider &amp; Tier II Pharmacist during virtual care with patient</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>VA Medications patient is taking</inlineHelpText>
    <label>VA Medications</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>