force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Medications_Refill_Renewal_Request__c.field-meta.xml
<CustomField>
    <fullName>VCC_Medications_Refill_Renewal_Request__c</fullName>
    <description>All medication(s) will be added to the Medications textbox of the pop-up window for inclusion into the Progress Note renewal section.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>All medication(s) will be added to the Medications textbox of the pop-up window for inclusion into the Progress Note renewal section.</inlineHelpText>
    <label>VA Medications Refill/Renewal Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>