force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Meds_Related_Reason_for_Encounter__c.field-meta.xml
<CustomField>
    <fullName>VCC_Meds_Related_Reason_for_Encounter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the reason for the encounter with the patient is medication-related</description>
    <inlineHelpText>Check if the reason for the encounter with the patient is medication-related</inlineHelpText>
    <label>Medication-Related Reason for Encounter</label>
    <type>Checkbox</type>
</CustomField>