force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Military_Sexual_Trauma__c.field-meta.xml
<CustomField>
    <fullName>VCC_Military_Sexual_Trauma__c</fullName>
    <description>Visit related to Military Sexual Trauma</description>
    <inlineHelpText>Visit related to Military Sexual Trauma</inlineHelpText>
    <label>Military Sexual Trauma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>