force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_Musculoskeletal_Other_Observations__c.field-meta.xml
<CustomField>
    <fullName>VCC_Musculoskeletal_Other_Observations__c</fullName>
    <description>Other Virtual Musculoskeletal observations about patient made by medical provider during virtual care visit</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Other Virtual Musculoskeletal observations about patient made by medical provider during virtual care visit</inlineHelpText>
    <label>Musculoskeletal Other Observations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>