force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_abdominal_localized_tenderness__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_abdominal_localized_tenderness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Virtual abdominal observation about patient made by medical provider during virtual care visit</description>
    <inlineHelpText>Virtual abdominal observation about patient made by medical provider during virtual care visit</inlineHelpText>
    <label>No abdominal localized tenderness</label>
    <type>Checkbox</type>
</CustomField>