force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_abnormal_bleeding__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_abnormal_bleeding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if these hematologic symptoms do not exist in patient during virtual visit</description>
    <inlineHelpText>True if these hematologic symptoms do not exist in patient during virtual visit</inlineHelpText>
    <label>No ecchymoses</label>
    <type>Checkbox</type>
</CustomField>