force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_acute_distress_or_cyanosis__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_acute_distress_or_cyanosis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Virtual observation about patient made by medical provider during virtual care visit</description>
    <inlineHelpText>Virtual observation about patient made by medical provider during virtual care visit</inlineHelpText>
    <label>No acute distress or cyanosis</label>
    <type>Checkbox</type>
</CustomField>