force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_appoint_avail_Emerg_Care_VCV__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_appoint_avail_Emerg_Care_VCV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when there is no appointment available and the agent advised the patient to seek Emergency Care</description>
    <inlineHelpText>Check if there is no appointment available and you advised the patient to seek Emergency Care</inlineHelpText>
    <label>No appt avail Advised Emergency Care</label>
    <type>Checkbox</type>
</CustomField>