force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_appointment_Urgent_Care_in_person__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_appointment_Urgent_Care_in_person__c</fullName>
    <defaultValue>false</defaultValue>
    <description
    >Checked when the patient is referred for in-person appointment(s), there is no appointment available, and the agent advised the patient to seek Urgent Care</description>
    <inlineHelpText>Check if there is no appointment available, and you advised the patient to seek Urgent Care</inlineHelpText>
    <label>No appt avail Advised Urgent Care</label>
    <type>Checkbox</type>
</CustomField>