force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_appt_avail_Emerg_Care_in_person__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_appt_avail_Emerg_Care_in_person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when the patient is referred for in-person appointment(s), there is no appointment available, and the agent advised the patient to seek Emergency
        Care.</description>
    <inlineHelpText>Check if there is no appointment available, and you advised the patient to seek Emergency Care</inlineHelpText>
    <label>No appt avail Advised Emergency Care</label>
    <type>Checkbox</type>
</CustomField>