force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_change_inbowel_or_bladder_control__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_change_inbowel_or_bladder_control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if these neurological symptoms do not exist in patient during virtual visit</description>
    <inlineHelpText>True if these neurological symptoms do not exist in patient during virtual visit</inlineHelpText>
    <label>No change in bowel or bladder control</label>
    <type>Checkbox</type>
</CustomField>