force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_deformity_asymmetry_erythema__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_deformity_asymmetry_erythema__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Virtual HEENT observation about patient made by medical provider during virtual care visit</description>
    <inlineHelpText>Virtual HEENT observation about patient made by medical provider during virtual care visit</inlineHelpText>
    <label>No deformity, asymmetry, erythema</label>
    <type>Checkbox</type>
</CustomField>