force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_dysuria_or_hematuria__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_dysuria_or_hematuria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if these genitourinary symptoms do not exist in patient during virtual visit</description>
    <inlineHelpText>True if these genitourinary symptoms do not exist in patient during virtual visit</inlineHelpText>
    <label>No dysuria or hematuria</label>
    <type>Checkbox</type>
</CustomField>