force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_ear_dainage_or_dizziness_vertigo__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_ear_dainage_or_dizziness_vertigo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if these HEENT (Head, Eyes, Ears, Nose, Throat symptoms do not exist in patient during virtual visit</description>
    <inlineHelpText>True if these HEENT (Head, Eyes, Ears, Nose, Throat symptoms do not exist in patient during virtual visit</inlineHelpText>
    <label>No ear dainage, or dizziness/vertigo</label>
    <type>Checkbox</type>
</CustomField>