force-app/main/default/objects/VCC_Progress_Note__c/fields/VCC_No_hearing_loss_tinnitus__c.field-meta.xml
<CustomField>
    <fullName>VCC_No_hearing_loss_tinnitus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if these HEENT (Head, Eyes, Ears, Nose, Throat symptoms do not exist in patient during virtual visit</description>
    <inlineHelpText>True if these HEENT (Head, Eyes, Ears, Nose, Throat symptoms do not exist in patient during virtual visit</inlineHelpText>
    <label>No hearing loss, tinnitus, ear pain</label>
    <type>Checkbox</type>
</CustomField>